--- a/stock-prediction-backend/requirements.txt
+++ b/stock-prediction-backend/requirements.txt
@@ -1,11 +1,48 @@
 
-numpy==1.24.3
 Flask==2.3.2
 Flask-CORS==3.0.10
 tensorflow==2.19.0
 scikit-learn==1.2.2
-numpy
+numpy==2.1.3
 gunicorn==20.1.0
-pandas
+pandas==2.2.3
 h5py==3.13.0
-gunicorn==20.1.0
+Werkzeug==3.1.3
+Jinja2==3.1.6
+itsdangerous==2.2.0
+click==8.1.8
+blinker==1.9.0
+Six==1.17.0
+grpcio==1.71.0
+protobuf==5.29.4
+python-dateutil==2.9.0.post0
+requests==2.32.3
+pytz==2025.2
+scipy==1.15.2
+threadpoolctl==3.6.0
+joblib==1.4.2
+tensorflow-io-gcs-filesystem==0.37.1
+tensorboard==2.19.0
+opt-einsum==3.4.0
+markdown==3.8
+absl-py==2.2.2
+gast==0.6.0
+flatbuffers==25.2.10
+google-pasta==0.2.0
+keras==3.9.2
+ml-dtypes==0.5.1
+termcolor==3.0.1
+typing-extensions==4.13.2
+urllib3==2.4.0
+idna==3.10
+charset-normalizer==3.4.1
+certifi==2025.1.31
+tzdata==2025.2
+packaging==25.0
+optree==0.15.0
+rich==14.0.0
+pygments==2.19.1
+markdown-it-py==3.0.0
+mdurl==0.1.2
+libclang==18.1.1
+namex==0.0.8
