--- a/stock-prediction-backend/requirements.txt
+++ b/stock-prediction-backend/requirements.txt
@@ -1,48 +1,71 @@
-
-Flask==2.3.2
-Flask-CORS==3.0.10
-tensorflow==2.19.0
-scikit-learn==1.2.2
-numpy==2.1.3
-gunicorn==20.1.0
-pandas==2.2.3
-h5py==3.13.0
-Werkzeug==3.1.3
-Jinja2==3.1.6
-itsdangerous==2.2.0
-click==8.1.8
-blinker==1.9.0
-Six==1.17.0
-grpcio==1.71.0
-protobuf==5.29.4
-python-dateutil==2.9.0.post0
-requests==2.32.3
-pytz==2025.2
-scipy==1.15.2
-threadpoolctl==3.6.0
-joblib==1.4.2
-tensorflow-io-gcs-filesystem==0.37.1
-tensorboard==2.19.0
-opt-einsum==3.4.0
-markdown==3.8
 absl-py==2.2.2
-gast==0.6.0
-flatbuffers==25.2.10
-google-pasta==0.2.0
-keras==3.9.2
-ml-dtypes==0.5.1
-termcolor==3.0.1
-typing-extensions==4.13.2
-urllib3==2.4.0
-idna==3.10
-charset-normalizer==3.4.1
+astunparse==1.6.3
+beautifulsoup4==4.13.4
+blinker==1.9.0
 certifi==2025.1.31
-tzdata==2025.2
-packaging==25.0
-optree==0.15.0
-rich==14.0.0
-pygments==2.19.1
-markdown-it-py==3.0.0
-mdurl==0.1.2
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+contourpy==1.3.0
+cycler==0.12.1
+Flask==2.3.2
+Flask-Cors==3.0.10
+flatbuffers==25.2.10
+fonttools==4.57.0
+frozendict==2.4.6
+gast==0.6.0
+google-pasta==0.2.0
+grpcio==1.71.0
+gunicorn==20.1.0
+h5py==3.13.0
+idna==3.10
+importlib_metadata==8.6.1
+importlib_resources==6.5.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+joblib==1.4.2
+keras==3.9.2
+kiwisolver==1.4.7
 libclang==18.1.1
+Markdown==3.8
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.9.4
+mdurl==0.1.2
+ml-dtypes==0.4.1
+multitasking==0.0.11
 namex==0.0.8
+numpy==1.26.0
+opt_einsum==3.4.0
+optree==0.15.0
+packaging==24.2
+pandas==2.2.3
+peewee==3.17.9
+Pillow==11.2.1
+platformdirs==4.3.7
+protobuf==4.25.6
+Pygments==2.19.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+pytz==2025.2
+requests==2.32.3
+rich==14.0.0
+scikit-learn==1.2.2
+scipy==1.13.1
+six==1.17.0
+soupsieve==2.6
+tensorboard==2.17.1
+tensorboard-data-server==0.7.2
+tensorflow==2.17.0
+tensorflow-intel==2.17.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==3.0.1
+threadpoolctl==3.6.0
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==1.17.2
+yfinance==0.2.55
+zipp==3.21.0
