--- a/stock-prediction-backend/requirements.txt
+++ b/stock-prediction-backend/requirements.txt
@@ -1,11 +1,14 @@
-
-numpy==1.24.3
 Flask==2.3.2
-Flask-CORS==3.0.10
-tensorflow==2.19.0
+Flask-Cors==3.0.10
+gunicorn==20.1.0
+pandas==2.2.3
+numpy==1.26.0
 scikit-learn==1.2.2
-numpy
-gunicorn==20.1.0
-pandas
-h5py==3.13.0
-gunicorn==20.1.0
+tensorflow-cpu>=2.16.0  # First TF version with Keras 3 support
+keras>=3.0.0
+h5py==3.11.0  # Compatible with TF 2.15
+protobuf==3.20.3  # Specific version to avoid conflicts
+yfinance==0.2.55
+peewee==3.17.9
+Werkzeug==3.0.1  # Compatible with Flask 2.3.2
+matplotlib
